--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <div class="signup-form__content">
           <div class="signup-form__row">
             <label for="username">Username</label>
-            <input type="text"  maxlength="24" name="username" id="username">
+            <input type="text" minlength="8" maxlength="24" name="username" id="username">
           </div>
           <div class="signup-form__row">
             <label for="password">Password</label>
-            <input type="password"  maxlength="32" name="password" id="password">
+            <input type="password" minlength="8" maxlength="32" name="password" id="password">
           </div>
           <input type="submit" value="Sign Up">
         </div>
